--- a/3_blog-app/package.json
+++ b/3_blog-app/package.json
@@ -10,7 +10,8 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "husky": "^4.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,8 +44,5 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "devDependencies": {
-    "husky": "^4.0.7"
   }
 }
