--- a/6_requests-suspense/6_1/package.json
+++ b/6_requests-suspense/6_1/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "concurrently": "^5.0.2",
+    "json-server": "^0.15.1",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
@@ -13,8 +15,9 @@
     "react-scripts": "^2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npx concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start:server": "npx json-server --watch server/db.json --port 4000",
+    "start:client": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
