--- a/6_requests-suspense/6_1/package.json
+++ b/6_requests-suspense/6_1/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "concurrently": "^5.0.2",
+    "http-proxy-middleware": "^0.20.0",
     "json-server": "^0.15.1",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
