--- a/6_requests-suspense/6_1/package.json
+++ b/6_requests-suspense/6_1/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "npx concurrently \"npm run start:server\" \"npm run start:client\"",
-    "start:server": "npx json-server --watch server/db.json --port 4000",
+    "start:server": "npx json-server --watch server/db.json --port 4000 --routes server/routes.json",
     "start:client": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
