--- a/7_hooks_routing/7_2/package.json
+++ b/7_hooks_routing/7_2/package.json
@@ -11,9 +11,11 @@
     "http-proxy-middleware": "^0.20.0",
     "json-server": "^0.15.1",
     "lint-staged": "^9.5.0",
+    "navi": "^0.14.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-navi": "^0.14.3",
     "react-request-hook": "^2.1.1",
     "react-scripts": "^2.1.8"
   },
