--- a/8_handling_hook/8_1/package.json
+++ b/8_handling_hook/8_1/package.json
@@ -15,6 +15,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hookedup": "^0.1.2",
     "react-navi": "^0.14.3",
     "react-request-hook": "^2.1.1",
     "react-scripts": "^2.1.8"
