--- a/8_handling_hook/8_5/package.json
+++ b/8_handling_hook/8_5/package.json
@@ -19,7 +19,8 @@
     "react-hookedup": "^0.1.2",
     "react-navi": "^0.14.3",
     "react-request-hook": "^2.1.1",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "use-undo": "^1.0.3"
   },
   "scripts": {
     "start": "npx concurrently \"npm run start:server\" \"npm run start:client\"",
